--- a/themes/site/css/frontend/css/custom.css
+++ b/themes/site/css/frontend/css/custom.css
@@ -40,3 +40,12 @@
 .errorMessage, .error{
      color: #a94442;
 }
+
+.text-password{
+    color: #777;
+    margin-left: -38px;
+    margin-right: -38px;
+    margin-top: -38px;
+    text-align: right;
+    text-decoration: none;
+}
