--- a/themes/site/css/home/assets/css/colors/color1.css
+++ b/themes/site/css/home/assets/css/colors/color1.css
@@ -5,8 +5,8 @@
 .brand span {color: #f32a2a;}
 
 @media (min-width:992px){
-#mainheader .main-nav ul > li > a:hover, #mainheader .main-nav ul > li > a.selected{ color:#f32a2a;}
-#header .main-nav ul > li > a:hover, #header .main-nav ul > li > a.selected{ color:#f32a2a;}
+#mainheader .main-nav ul > li > a:hover, #mainheader .main-nav ul > li.selected > a{ color:#f32a2a;}
+#header .main-nav ul > li > a:hover, #header .main-nav ul > li.selected > a{ color:#f32a2a;}
 }
 .selected1{ color: #f32a2a;}
 .selected1:hover{ color: #f32a2a;}
@@ -41,11 +41,11 @@ span a:hover, a:hover {text-decoration: none; color: #f32a2a; }
 
 /* Reservation */
 #reservation_form .submitBtn {background-color: #f32a2a;}
-.reserve_form input:focus, .reserve_form textarea:focus ,input:valid:focus{ 
+.reserve_form input:focus, .reserve_form textarea:focus ,input:valid:focus{
   	/* IE6-9 */
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8); 
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
 }
 
 /* Contact */
@@ -54,11 +54,11 @@ span a:hover, a:hover {text-decoration: none; color: #f32a2a; }
 a.mail-text:hover{color: #f32a2a;}
 .mail-text i{color:#f32a2a;}
 #contact_form .submitBtn {background-color: #f32a2a;}
-.cont_form input:focus, .cont_form textarea:focus ,input:valid:focus{ 
+.cont_form input:focus, .cont_form textarea:focus ,input:valid:focus{
   	/* IE6-9 */
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8); 
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(243,42,42,0.8);
 }
 
 /* Scroll Pane */
@@ -69,7 +69,7 @@ a.mail-text:hover{color: #f32a2a;}
 .spmenu{background: rgba(243,42,42,0.95);}
 .spmenu1:before, .spmenu2:before, .spmenu3:before, .spmenu4:before
 {
-border-top: 17px solid rgba(243,42,42,0.95); 
+border-top: 17px solid rgba(243,42,42,0.95);
 border-right: 13px solid transparent;
 border-bottom: 13px solid transparent;
 border-left: 0px solid transparent;
@@ -78,8 +78,8 @@ border-left: 0px solid transparent;
 /* Special Menu */
 #lightbox .close, #lightbox2 .close, #lightbox3 .close{background:#f32a2a;}
 
-#progress { 
-		position: absolute; top: 0; left:0; height: 7px; width: 0px; 
+#progress {
+		position: absolute; top: 0; left:0; height: 7px; width: 0px;
 		background: -moz-linear-gradient(left, rgba(243,42,42,0.3) 0%, rgba(243,42,42,0.8) 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(243,42,42,0.3)), color-stop(100%,rgba(0,0,0,0.8))); /* Chrome,Safari4+ */
 		background: -webkit-linear-gradient(left, rgba(243,42,42,0.3) 0%,rgba(243,42,42,0.8) 100%); /* Chrome10+,Safari5.1+ */
@@ -87,7 +87,7 @@ border-left: 0px solid transparent;
 		background: -ms-linear-gradient(left, rgba(243,42,42,0.3) 0%,rgba(243,42,42,0.8) 100%); /* IE10+ */
 		background: linear-gradient(to right, rgba(243,42,42,0.3) 0%,rgba(243,42,42,0.8) 100%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d1e1e1e', endColorstr='#cc000000',GradientType=1 ); /* IE6-9 */
-			z-index: 99999; 
+			z-index: 99999;
 		-webkit-border-top-right-radius: 50px;
 		-webkit-border-bottom-right-radius: 50px;
 		-moz-border-radius-topright: 50px;
