--- a/themes/site/css/home/assets/css/menu.css
+++ b/themes/site/css/home/assets/css/menu.css
@@ -1,6 +1,6 @@
 @media (min-width:768px){
-.lead{font-size:22px} 
-.main-nav ul li li a:hover,.main-nav ul li li a.selected{ color:#ffffff; border-radius:0;}
+.lead{font-size:22px}
+.main-nav ul li li a:hover,.main-nav ul li li.selected a{ color:#ffffff; border-radius:0;}
 
 }
 
@@ -28,14 +28,14 @@
 .main-nav ul li a .sub-toggle:hover:before{ color:#b9b9b9; }
 ul.nav li a:link{ color:#b9b9b9;	text-decoration:none; }
 ul.nav li a:visited{	color:#b9b9b9; text-decoration:none; 	}
-ul.nav li a:hover, ul.nav li a.selected{ color:#333; background:rgba(255,255,255,0.95); text-decoration:none; }
-.main-nav ul li li a:hover, .main-nav ul li li a.selected {color:#333; background:rgba(255,255,255,0.95);}
-ul.nav li a.selected{ color:#ffffff;  text-decoration:none;  }
+ul.nav li a:hover, ul.nav li.selected a{ color:#333; background:rgba(255,255,255,0.95); text-decoration:none; }
+.main-nav ul li li a:hover, .main-nav ul li li.selected a {color:#333; background:rgba(255,255,255,0.95);}
+ul.nav li.selected a{ color:#ffffff;  text-decoration:none;  }
 .main-nav ul li li i{ display:none; }
 .main-nav>ul>li>ul{border-top:0px solid #ffffff;}
 
-ul.nav li a.selected{ color:#333; background:rgba(255,255,255,0.95); } 
-ul.nav ul li a.selected, ul.nav ul li a.focus, ul.nav ul li a.hover{ color:#ffffff;}
+ul.nav li.selected a{ color:#333; background:rgba(255,255,255,0.95); }
+ul.nav ul li.selected a, ul.nav ul li a.focus, ul.nav ul li a.hover{ color:#ffffff;}
 ul.nav li a{
 font-family: 'Oswald';
 text-transform: uppercase;
@@ -45,7 +45,7 @@ font-size: 13px;
 color: #a6a9b9;
 width:100%;
 }
-/*.main-nav ul ul li a:hover, .main-nav ul ul li a.selected{ background-color:transparent; color:#333;}*/
+/*.main-nav ul ul li a:hover, .main-nav ul ul li.selected a{ background-color:transparent; color:#333;}*/
 
 
 
@@ -80,25 +80,25 @@ width:100%;
 .main-nav>ul{margin:0;display:block!important;background:transparent;}
 .main-nav>ul>li>ul{/*border-top:2px solid #ffffff*/}
 .main-nav>ul>li>ul>li:first-child{border-top:0}
-.main-nav ul li li a:hover,.main-nav ul li li a.selected{ background-color:#98c521; color:#ffffff; border-radius:0;}
-ul.nav li li a:hover:after, ul.nav li li a.selected:after { border:none; }	
+.main-nav ul li li a:hover,.main-nav ul li li.selected a{ background-color:#98c521; color:#ffffff; border-radius:0;}
+ul.nav li li a:hover:after, ul.nav li li.selected a:after { border:none; }
 .main-nav>ul>li>ul{/*border-bottom:2px solid #98c521; box-shadow:0px 1px 6px #d2d2d2;*/}
-/*ul.nav li a:hover:after, ul.nav li a.selected:after { 
+/*ul.nav li a:hover:after, ul.nav li.selected a:after {
 	content:'';
 	width:0;
 	height:0;
 	position: absolute;
-	left: 38%;     
+	left: 38%;
 	bottom: -43%;
-	border-width:8px; 
+	border-width:8px;
 	border-style:solid;
 	z-index:999999;
-}*/	
+}*/
 
 ul.nav li a:link{ color:#ffffff;	text-decoration:none; }
 ul.nav li a:visited{	color:#ffffff; text-decoration:none;}
 ul.nav li a:hover{ color:#ffffff;  text-decoration:none; background-color:transparent; }
-ul.nav li a.selected{ color:#ffffff; text-decoration:none;background-color:transparent; }
+ul.nav li.selected a{ color:#ffffff; text-decoration:none;background-color:transparent; }
 ul.nav li a::after{
 	position: absolute;
 	top:100%;
@@ -115,22 +115,22 @@ ul.nav li a::after{
 	-moz-transform: translateY(10px);
 	transform: translateY(10px);
 }
-ul.nav li a:hover::after, ul.nav li a.selected:after { /* use CSS generated content to add arrow to the menu */
+ul.nav li a:hover::after, ul.nav li.selected a:after { /* use CSS generated content to add arrow to the menu */
 		/*border-color:#ffffff transparent transparent transparent;*/ /* create up arrow */
-		
-		
+
+
 	}
 	.main-nav ul li li i{ display:block;}
-	
+
  }
 @media (min-width:1200px){ }
 /*.main-nav ul li li a:hover,*/
-#mainheader .main-nav ul li li a.hover, #mainheader .main-nav ul li li a.selected{  background:rgba(255,255,255,0.95); color:#333; border-radius:0;}
-#header .main-nav ul li li a.hover, #header .main-nav ul li li a.selected{  background:rgba(255,255,255,0.95); color:#333; border-radius:0;}
+#mainheader .main-nav ul li li a.hover, #mainheader .main-nav ul li li.selected a{  background:rgba(255,255,255,0.95); color:#333; border-radius:0;}
+#header .main-nav ul li li a.hover, #header .main-nav ul li li.selected a{  background:rgba(255,255,255,0.95); color:#333; border-radius:0;}
 .main-nav ul li a .sub-toggle{ background:rgba(84,84,84,0.95);}
 
 /* Firefox Only Hack code css */
-@-moz-document url-prefix() { 
+@-moz-document url-prefix() {
  .main-nav ul li li i { margin-top:-20px;}
 }
 @media (min-width: 768px) and (max-width: 980px) {
@@ -140,7 +140,7 @@ ul.nav li a:hover::after, ul.nav li a.selected:after { /* use CSS generated cont
 .menu-inner .brand {padding: 9px 0;}
 .header_details{ margin-top:70px;}
 }
-@media (min-width: 321px) and (max-width: 480px) { 
+@media (min-width: 321px) and (max-width: 480px) {
 .menu-inner .brand {padding: 9px 0;}
 .menu-inner .nav-toggle{ top:23px;}
 .header_details{ margin-top:70px;}
