--- a/themes/site/css/home/assets/css/style.css
+++ b/themes/site/css/home/assets/css/style.css
@@ -1531,6 +1531,9 @@ a.mail-text:hover{  text-decoration:none; color: #f32a2a;}
     border-radius:3px;
     margin-bottom: 0;
 }
+#hcontact_form .error input{
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 12px rgba(243, 42, 42, 1);
+}
 #hcontact_form .hmoodlist label{
     position:relative;
     padding: 0;
@@ -1546,16 +1549,18 @@ a.mail-text:hover{  text-decoration:none; color: #f32a2a;}
 }
 #hcontact_form .hmoodlist .mood_label{
     font-family: oswald;
-font-size: 14px;
-margin: 0;
+    font-size: 14px;
+    margin: 0;
 }
 
 #hcontact_form .row.hmoodlist {
-  margin-bottom: 4px;
-  margin-top: 8px;
+    margin-bottom: 4px;
+    margin-top: 8px;
 }
-
-
+#hcontact_form label.selected .mood_type_smiley{
+    transition: all .2s ease-in-out;
+    transform: scale(1.3);
+}
 
 #hcontact_form select{
     width:50%;
