--- a/themes/admin/css/style.css
+++ b/themes/admin/css/style.css
@@ -577,7 +577,7 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
 .top-nav ul.top-menu>li>a {
     border-radius:100px;
     -webkit-border-radius:100px;
-    padding:0px;
+    padding: 0 8px;
     background:none;
     margin-right:0;
     border:1px solid #F6F6F6;
