--- a/themes/site/css/frontend/css/custom.css
+++ b/themes/site/css/frontend/css/custom.css
@@ -159,3 +159,11 @@
 #adsBlock{
     display: none !important;
 }
+
+#fullcalendar .fc-widget-content{
+    cursor: pointer;
+}
+
+#fullcalendar .fc-other-month {
+    cursor: default;
+}
