--- a/themes/admin/css/style.css
+++ b/themes/admin/css/style.css
@@ -5710,3 +5710,9 @@ right: -1px;
     -o-transition: none;
     transition: none;
 }
+
+
+.mood-status-bar {
+    font-size: 17px;
+    margin: 0 29%;
+}
