--- a/themes/site/css/frontend/css/theme.css
+++ b/themes/site/css/frontend/css/theme.css
@@ -286,7 +286,8 @@ hr.tall {
   top: 15px;
   height: 30px;
   width: 1px;
-  border-left: 1px solid #ebebeb; }
+/*  border-left: 1px solid #ebebeb; */
+}
 
 /* Left Side Menus */
 #settings_menu,
@@ -367,7 +368,8 @@ hr.tall {
   right: 0;
   top: 15px;
   height: 32px;
-  border-right: 1px solid #ebebeb; }
+/*  border-right: 1px solid #ebebeb; */
+}
 
 .navbar-search input {
   outline: none;
