--- a/themes/site/css/home/assets/css/style.css
+++ b/themes/site/css/home/assets/css/style.css
@@ -1606,6 +1606,7 @@ a.mail-text:hover{  text-decoration:none; color: #f32a2a;}
     color:#FFFFFF;
     background-color:#f32a2a;
     margin: 10px 0;
+    min-width: 125px;
 }
 #hcontact_form .submitBtn:hover { color:#ffffff; background-color: #727272; }
 #hcontact_form .submitBtn:focus{ box-shadow:none; }
