--- a/themes/site/css/home/assets/css/style.css
+++ b/themes/site/css/home/assets/css/style.css
@@ -1147,16 +1147,24 @@ input:invalid, input:out-of-range{
     line-height:35px;
     border-radius:3px;
 }
+
 input:valid, input:in-range{
-    background:#ffffff;
-    border:transparent;
-    height:35px;
-    line-height:35px;
-    margin-right:10px;
-    border-radius:3px;
-    font-size:13px;
-    color:#727272;
-    padding-left:10px;
+	background:#ffffff;
+	border:transparent;
+	height:35px;
+	line-height:35px;
+	margin-right:25px;
+	border-radius:3px;
+	font-size:13px;
+	color:#727272;
+	padding-left:10px;
+  
+}
+.mood_radio.signup {
+  left: 11px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 .reserve_form input[type="text"]{
     width:100%;
@@ -1559,7 +1567,7 @@ a.mail-text:hover{  text-decoration:none; color: #f32a2a;}
     margin-bottom: 4px;
     margin-top: 8px;
 }
-#hcontact_form label.selected .mood_type_smiley{
+#hcontact_form label.selected .mood_type_smiley,#signup img.selected{
     transition: all .2s ease-in-out;
     transform: scale(1.3);
 }
@@ -2126,3 +2134,189 @@ mobile
     max-width: 1111px !important;
   }
 }
+
+/*--------------*/
+#signup {
+			width: 550px;
+			height: 330px;
+			padding: 20px;
+			position: relative;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px; 
+			border-radius: 3px;  
+		}
+
+		#signup::before, 
+		#signup::after {
+			content: "";
+			position: absolute;
+			bottom: -3px;
+			left: 2px;
+			right: 2px;
+			top: 0;
+			z-index: -1;
+		}
+
+		#signup::after {
+			left: 4px;
+			right: 4px;
+			bottom: -5px;
+			z-index: -2;
+			-moz-box-shadow: 0 8px 8px -5px rgba(0,0,0,.3);
+			-webkit-box-shadow: 0 8px 8px -5px rgba(0,0,0,.3);
+		}
+
+		/*------------------------------*/
+
+		#signup h1 {
+			position: relative;
+			font: italic 1em/3.5em 'trebuchet MS',Arial, Helvetica;
+			color: #999;
+			text-align: center;
+			margin: 0 0 20px;
+		}
+
+		#signup h1::before,
+		#signup h1::after{
+			content:'';
+			position: absolute;
+			border: 1px solid rgba(0,0,0,.15);
+			top: 10px;
+			bottom: 10px;
+			left: 0;
+			right: 0;
+		}
+
+		#signup h1::after{
+			top: 0;
+			bottom: 0;
+			left: 10px;
+			right: 10px;
+		}
+
+		/*------------------------------*/
+
+        ::-webkit-input-placeholder {
+           color: #bbb;
+        }
+        
+        :-moz-placeholder {
+           color: #bbb;
+        } 				    	
+
+		.placeholder{
+			color: #bbb; /* polyfill */
+		}		
+
+		#signup input{
+			margin: 5px 0;
+			padding: 5px 115px 5px 10px;
+			*width: 518px;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			border: 1px solid #ccc;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px;
+			border-radius: 3px;	
+		}
+		
+		.signup{
+			margin: 5px 0;
+			padding: 15px;
+			*width: 518px;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			border: 1px solid #ccc;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px;
+			border-radius: 3px;	
+		}
+
+		#signup input:focus{
+			outline: 0;
+			border-color: #aaa;
+			-moz-box-shadow: 0 2px 1px rgba(0, 0, 0, .3) inset;
+			-webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, .3) inset;
+			box-shadow: 0 2px 1px rgba(0, 0, 0, .3) inset;
+		}		
+
+		#signup button{
+			margin: 10px 0 0 0;
+			padding: 10px 0px;			
+			width: 25%;
+			cursor: pointer;
+			border: 1px solid #ec2222;
+			overflow: visible;
+			display: inline-block;
+			color: #fff;
+			font-family:Arial, Helvetica, sans-serif;
+			font-size:13px;
+			font-weight:bold;
+			text-shadow: 0 -1px 0 rgba(0,0,0,.4);		  
+			background-color: #f32a2a;
+			background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,.5)), to(rgba(255,255,255,0)));
+			background-image: -webkit-linear-gradient(top, rgba(255,255,255,.5), rgba(255,255,255,0));
+			background-image: -moz-linear-gradient(top, rgba(255,255,255,.5), rgba(255,255,255,0));
+			background-image: -ms-linear-gradient(top, rgba(255,255,255,.5), rgba(255,255,255,0));
+			background-image: -o-linear-gradient(top, rgba(255,255,255,.5), rgba(255,255,255,0));
+			background-image: linear-gradient(top, rgba(255,255,255,.5), rgba(255,255,255,0));
+			-webkit-transition: background-color .2s ease-out;
+			-moz-transition: background-color .2s ease-out;
+			-ms-transition: background-color .2s ease-out; 
+			-o-transition: background-color .2s ease-out;  
+			transition: background-color .2s ease-out;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px;
+			border-radius: 3px;
+			-moz-box-shadow:  0 2px 1px rgba(0, 0, 0, .3),
+							  0 1px 0 rgba(255, 255, 255, .5) inset;
+			-webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, .3),
+								0 1px 0 rgba(255, 255, 255, .5) inset;
+			box-shadow: 0 2px 1px rgba(0, 0, 0, .3),
+						0 1px 0 rgba(255, 255, 255, .5) inset;			  						  
+		}
+
+		#signup button:hover{
+		  	background-color: #727272;
+            border-color: #727272;
+		}
+
+		#signup button:active{
+			position: relative;
+			top: 3px;
+			text-shadow: none;
+			-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .3) inset;
+			-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .3) inset;
+			box-shadow: 0 1px 0 rgba(255, 255, 255, .3) inset;
+		}
+                
+                #signup label {
+  display: inline-block;
+  float: left;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin-right: 21px;
+}
+/*----------------------------*/
+@media (max-width: 767px) {
+#signup label {
+  display: inline-block;
+  float: left;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin-right: 20px;
+}
+
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    #signup label {
+  display: inline-block;
+  float: left;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin-right: 20px;
+}
+}
+        
+   
