--- a/protected/extensions/EFullCalendar/assets/fullcalendar/fullcalendar.css
+++ b/protected/extensions/EFullCalendar/assets/fullcalendar/fullcalendar.css
@@ -1,11 +1,11 @@
 /*
- * FullCalendar v1.5.4 Stylesheet
+ * FullCalendar v1.5 Stylesheet
  *
  * Copyright (c) 2011 Adam Shaw
  * Dual licensed under the MIT and GPL licenses, located in
  * MIT-LICENSE.txt and GPL-LICENSE.txt respectively.
  *
- * Date: Tue Sep 4 23:38:33 2012 -0700
+ * Date: Sat Mar 19 18:59:37 2011 -0700
  *
  */
 
@@ -22,7 +22,7 @@
 	
 html .fc,
 .fc table {
-	font-size: .9em;
+	font-size: 1em;
 	}
 	
 .fc td,
@@ -245,10 +245,6 @@ html .fc,
 	border-color: #ddd;
 	}
 	
-.fc-state-disabled {
-	cursor: default;
-	}
-	
 .fc-state-disabled .fc-button-effect {
 	display: none;
 	}
@@ -290,7 +286,6 @@ a.fc-event {
 	height: 100%;
 	border-style: solid;
 	border-width: 0;
-	overflow: hidden;
 	}
 	
 .fc-event-time,
